--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <html>
   <head>
       <title>
@@ -5,18 +6,25 @@
             Alder Employee Integration Potal
           {% endblock title%}
       </title>
+      <!--
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+      -->
+
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+      <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" />
       <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-      <!-- Optional theme -->
+      <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      -->
+      <!-- Optional theme
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-      <!-- Latest compiled and minified JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+      -->
   </head>
   <body>
+
       <div class="col-sm-10 col-sm-offset-1">
+        <div>
+          <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
+        <div>
           <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -26,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" >Alder World</a>
+                  <a class="navbar-brand" href="/">Alder World</a>
                 </div>
 
                 <div class="collapse navbar-collapse">
@@ -46,10 +54,18 @@
                             <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 人事行政</span>
                           </a>
                       </li>
+                      <li = class="">
+                          <a href="#">
+                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
+                          </a>
+                      </li>
+                      <li = class="">
+                          <a href="#">
+                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 銷售管理</span>
+                          </a>
+                      </li>
                   </ul>
                 </div>
-
-
             </div>
           </nav>
 
@@ -59,7 +75,18 @@
 
       <div>
           {% block footer %}
+          <div>
+            <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
+          <div>
           {% endblock footer %}
       </div>
+              <script src="{% static 'js/bootstrap.min.js' %}" ></script>
+              <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
+
+              <!-- Latest compiled and minified JavaScript
+              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+              -->
+
   </body>
+
 </html>
