--- a/templates/base.html
+++ b/templates/base.html
@@ -1,92 +1,82 @@
 {% load staticfiles %}
 <html>
-  <head>
-      <title>
-          {% block title %}
-            Alder Employee Integration Potal
-          {% endblock title%}
-      </title>
-      <!--
-        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-      -->
+    <head>
+        <title>
+            {% block title %}
+                Alder Employee Integration Potal
+            {% endblock title%}
+        </title>
 
-      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-      <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" />
-      <!-- Latest compiled and minified CSS -->
-      <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      -->
-      <!-- Optional theme
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-      -->
-  </head>
-  <body>
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" />
 
-      <div class="col-sm-10 col-sm-offset-1">
-        <div>
-          <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
-        <div>
-          <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">Alder World</a>
-                </div>
+    </head>
+    <body>
 
-                <div class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav">
-                      <li = class="">
-                          <a href="#">
-                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 電子佈告</span>
-                          </a>
-                      </li>
-                      <li = class="">
-                          <a href="#">
-                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 亞德園地</span>
-                          </a>
-                      </li>
-                      <li = class="">
-                          <a href="#">
-                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 人事行政</span>
-                          </a>
-                      </li>
-                      <li = class="">
-                          <a href="#">
-                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
-                          </a>
-                      </li>
-                      <li = class="">
-                          <a href="#">
-                            <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 銷售管理</span>
-                          </a>
-                      </li>
-                  </ul>
-                </div>
+        <div class="col-sm-10 col-sm-offset-1">
+            <div>
+              <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
             </div>
-          </nav>
+            <nav class="navbar navbar-inverse">
+              <div class="container-fluid">
+                  <div class="navbar-header">
+                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="/">Alder World</a>
+                  </div>
 
-        {% block content %}
-        {% endblock content %}
-</div>
+                  <!-- menu bar -->
+                  <div class="collapse navbar-collapse">
+                      <ul class="nav navbar-nav">
+                          <li = class="">
+                              <a href="#">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 電子佈告</span>
+                              </a>
+                          </li>
+                          <li = class="">
+                              <a href="#">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 亞德園地</span>
+                              </a>
+                          </li>
+                          <li = class="">
+                              <a href="#">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 人事行政</span>
+                              </a>
+                          </li>
+                          <li = class="">
+                              <a href="#">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
+                              </a>
+                          </li>
+                          <li = class="">
+                              <a href="/ship">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 銷售管理</span>
+                              </a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+            </nav>
 
-      <div>
-          {% block footer %}
-          <div>
-            <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
-          <div>
-          {% endblock footer %}
-      </div>
-              <script src="{% static 'js/bootstrap.min.js' %}" ></script>
-              <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
+            {% block content %}
+            {% endblock content %}
 
-              <!-- Latest compiled and minified JavaScript
-              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-              -->
 
-  </body>
 
+                {% block footer %}
+                <div>
+                    <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
+                <div>
+                {% endblock footer %}
+            
+        </div>
+        <script src="{% static 'js/bootstrap.min.js' %}" ></script>
+        <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
+
+
+    </body>
 </html>
