--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
         <div class="col-sm-10 col-sm-offset-1">
             <div>
-              <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
+              <img src="{% static 'img/header_line.jpg' %}" width="100%" height="40"/>
             </div>
             <nav class="navbar navbar-inverse">
               <div class="container-fluid">
@@ -69,10 +69,10 @@
 
                 {% block footer %}
                 <div>
-                    <img src="{% static 'img/alder_line.jpg' %}" width="100%" height="40"/>
+                    <img src="{% static 'img/footer_line.jpg' %}" width="100%" height="40"/>
                 <div>
                 {% endblock footer %}
-            
+
         </div>
         <script src="{% static 'js/bootstrap.min.js' %}" ></script>
         <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
