--- a/templates/ship_list.html
+++ b/templates/ship_list.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 
-  <h1>{{ title }}</h1>
+  <p><h1>{{ title }}</h1></p>
+  <p><a href="/ship/create">Create New</a></p>
 
 
 <div>
