Quote Line insert has Error

--- a/templates/dpsed_detail.html
+++ b/templates/dpsed_detail.html
@@ -4,6 +4,14 @@
 {% block content  %}
 
   <p>{{ title }}</p>
+
+  {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 <form action="" method="POST">{% csrf_token %}
     {{ record.work_order }}
 
