--- a/templates/ajax_product.html
+++ b/templates/ajax_product.html
@@ -1,1 +1,1 @@
-<span>{{ obj.id }},{{ obj.sap_no }},{{ obj.product_desc }}</span>
+<span>{{ obj.sap_no }},{{ obj.product_desc }},{{obj.specification}}</span>
