--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
         </div>
         <script src="{% static 'js/bootstrap.min.js' %}" ></script>
         <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
+        <script src="{% static 'js/myajax.js' %}" ></script>
 
 
     </body>
