--- a/templates/quote_detail.html
+++ b/templates/quote_detail.html
@@ -9,7 +9,7 @@
 <table class="table table-bordered">
   <tr>
     <td>報價單號</td>
-    <td>{{ record.id }}</td>
+    <td>{{ record.order_number }}</td>
     <td>報價日期</td>
     <td>{{ record.ord_date | date:"Y-m-d" }}</td>
   </tr>
