--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,26 @@
 
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" />
+        <script src="{% static 'js/bootstrap.min.js' %}" ></script>
+        <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
+        <script src="{% static 'js/myajax.js' %}" ></script>
+
 
     </head>
     <body>
 
         <div class="col-sm-10 col-sm-offset-1">
             <div>
-              <img src="{% static 'img/header_line.jpg' %}" width="100%" height="40"/>
+
+              <span>
+                <a href="/">
+                <img src="{% static 'img/alder_logo.png' %}"  width="45" height="45" alt="..."/>
+                </a>
+                <img src="{% static 'img/header_line.jpg' %}" width="96%" height="40"/>
+              </span>
+
             </div>
+
             <nav class="navbar navbar-inverse">
               <div class="container-fluid">
                   <div class="navbar-header">
@@ -26,38 +38,45 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="/">Alder World</a>
                   </div>
+
 
                   <!-- menu bar -->
                   <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav">
-                          <li = class="">
+                          <li  class="">
                               <a href="#">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 電子佈告</span>
                               </a>
                           </li>
-                          <li = class="">
+                          <li  class="">
                               <a href="#">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 亞德園地</span>
                               </a>
                           </li>
-                          <li = class="">
+                          <li  class="">
                               <a href="#">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 人事行政</span>
                               </a>
                           </li>
-                          <li = class="">
+                          <li  class="">
                               <a href="#">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
                               </a>
                           </li>
-                          <li = class="">
+                          <li  class="">
                               <a href="/ship">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 銷售管理</span>
                               </a>
                           </li>
+
+
                       </ul>
+
+
+
+
+
                   </div>
               </div>
             </nav>
@@ -74,9 +93,6 @@
                 {% endblock footer %}
 
         </div>
-        <script src="{% static 'js/bootstrap.min.js' %}" ></script>
-        <script src="{% static 'js/jquery-1.8.2.min.js' %}" ></script>
-        <script src="{% static 'js/myajax.js' %}" ></script>
 
 
     </body>
