add in OrderNumberManager

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
 
               <span>
                 <a href="/">
-                <img src="{% static 'img/alder_logo.png' %}"  width="45" height="45" alt="..."/>
+                <img src="{% static 'img/alder_logo.png' %}"  width="50" height="50" alt="..."/>
                 </a>
-                <img src="{% static 'img/header_line.jpg' %}" width="96%" height="40"/>
+                <img src="{% static 'img/alder_upline.jpg' %}" width="96%" height="50"/>
               </span>
 
             </div>
