--- a/templates/ship_list.html
+++ b/templates/ship_list.html
@@ -5,7 +5,7 @@
 
   <p><h3>{{ title }}</h3></p>
   <div>
-      <span class="label label-warning" ><a href="/ship/create">Create New</a></span>
+      <span ><a href="/ship/create" class="btn btn-primary">Create New</a></span>
       <span align="right">
           <div class="pagination">
               <span class="step-links">
