--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                   <div class="collapse navbar-collapse">
                       <ul class="nav navbar-nav">
                           <li  class="">
-                              <a href="#">
+                              <a href="/post">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 電子佈告</span>
                               </a>
                           </li>
