--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -26,13 +26,16 @@
 <div>
 
 
-{% for record in queryset %}
-<div>
-  <a href='{{ record.get_absoulte_url }}'>{{ record.subject | truncatechars:30 }}</a>
-  {{ record.create_at | date:"Y-m-d" }}
+{% for record in object_list %}
+<div class="col-sm-6 col-md-4">
+  <h3><a href='{{ record.get_absoulte_url }}'>{{ record.subject | truncatechars:30 }}</a>
+    <small>{{ record.create_at | timesince }}</small>
+</h3>
 
-    {{ record.content | linebreaks | truncatechars:60 }}
+    <p>{{ record.content | linebreaks | truncatechars:80 }}</p>
     {{ record.modify | date:"Y-m-d"}}
+    <a href='{{ record.get_absoulte_url }}' class="btn btn-primary" role="button">View</a>
+
 </div>
 {% endfor %}
 
