--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                               </a>
                           </li>
                           <li  class="">
-                              <a href="#">
+                              <a href="/dps">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
                               </a>
                           </li>
