--- a/templates/quote_header.html
+++ b/templates/quote_header.html
@@ -11,6 +11,8 @@
     <input id="id_customer" name="customer" size="20" title="Customer Number" type="text" onblur="showCustName(this.value)" cssStyle="width:60px" />
     <span id="span_title"></span>
   </p>
+
+  {{ form.customer}}
   <p>
     <label>Sales Name:</label>{{ form.request_user}}
   </p>
