--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,11 @@
                               </a>
                           </li>
                           <li  class="">
+                              <a href="/product">
+                                <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 產品</span>
+                              </a>
+                          </li>
+                          <li  class="">
                               <a href="/dps">
                                 <span class="glyphicon glyphion-cd" aria-hidden="true">&nbsp; 工單管理</span>
                               </a>
