--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
             {% block title %}
                 Alder Employee Integration Potal
             {% endblock title%}
+
+            {% block head_extra %}{% endblock head_extra %}
         </title>
 
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
