--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,18 @@
     </head>
     <body>
 
+        <div id="subheader">
+        <div class="cart">
+        Your cart is empty.
+        </div>
+        </div>
+        <div id="content">
+
+      </div>
+
+
+
+
         <div class="col-sm-10 col-sm-offset-1">
             <div>
 
